<resources>
    <string name="app_name">US Stocks</string>
    <string name="action_search">Search</string>
    <string name="search_title">Search Stock</string>
    <string name="search_hint">Company name</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="sort">ReOrder</string>

    <string name="exit">Exit</string>
    <string name="share_text">Stock Quotes - Watch your stocks in material design way!</string>
    <string name="from">from</string>
    <string name="drag_drop">   Drag &amp; Drop</string>
    <string name="sort_ab">Sort alphabetically</string>
    <string name="stock_details">Details</string>
    <string name="stock_news">News</string>

    <string name="week">Week</string>
    <string name="volume">Volume</string>
    <string name="open">Open</string>
    <string name="days_high">Day High</string>
    <string name="days_low">Day Low</string>
    <string name="year_high">Year High</string>
    <string name="year_low">Year Low</string>

    <string name="prev_close">Prev Close</string>
    <string name="eps">EPS</string>
    <string name="beta">Beta</string>
    <string name="divyi">Div/Yield</string>
    <string name="shares">Shares</string>
    <string name="market_capital">Mkt cap</string>
    <string name="pe_ratio">P/E</string>
    <string name="last_trade">Last Trade : </string>
    <string name="pre_market">Pre Market : </string>

    <string name="grpah_day">1D</string>
    <string name="grpah_day5">5D</string>
    <string name="grpah_month">1M</string>
    <string name="grpah_month3">3M</string>
    <string name="grpah_month6">6M</string>
    <string name="grpah_year">1Y</string>
    <string name="grpah_year5">5Y</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="github">GitHub</string>
    <string name="copyright">Copyright</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Tiny Stock Quotes is tiny app which allows you follow any NASDAQ stock in simple and comfortable way. It is totally free, open-source and contains no advertising. App is still in beta, so I am open to any feedback.</string>
    <string name="feedback">Feedback</string>
    <string name="send_email">Send Email</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>


    <string name="info">Quote</string>
    <string name="news">News</string>
    <string name="others">Others</string>

    <string name="preference_content_chart_period">Default Chart Period</string>
    <string name="preference_content_chart_period_summary">Setup default chart period</string>


    <string-array name="chart_period">
        <item>1 Day</item>
        <item>5 Days</item>
        <item>1 Month</item>
        <item>3 Months</item>
        <item>6 Months</item>
        <item>1 Year</item>
        <item>5 Years</item>
    </string-array>
    <string-array name="hart_period_code">
        <item>1D</item>
        <item>5D</item>
        <item>1M</item>
        <item>3M</item>
        <item>6M</item>
        <item>1Y</item>
        <item>5Y</item>
    </string-array>

</resources>
