<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@mipmap/icon_toolbar_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_remove"
        android:title="@string/remove"
        android:icon="@mipmap/icon_toolbar_remove"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@mipmap/icon_toolbar_edit"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@mipmap/icon_toolbar_sort"
        app:showAsAction="always" />

</menu>